<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tickets"
        android:icon="@drawable/ic_app_bar_tickets"
        android:title="@string/app_bar_tickets" />
    <item
        android:id="@+id/hotels"
        android:icon="@drawable/ic_app_bar_hotels"
        android:title="@string/app_bar_hotels" />
    <item
        android:id="@+id/shorter"
        android:icon="@drawable/ic_app_bar_shorter"
        android:title="@string/app_bar_shorter" />
    <item
        android:id="@+id/subscriptions"
        android:icon="@drawable/ic_app_bar_subscriptions"
        android:title="@string/app_bar_subscriptions" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_app_bar_profile"
        android:title="@string/app_bar_profile" />
</menu>